@@ -270,6 +270,8 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
     - pulsemanager.cpp: remove config.pa while doing post-exit cleanups.
     - src/pulsemanager.{cpp,h}: add get_pulse_dir () for fetching the
       (OS-dependent) PulseAudio config and cookie directory.
+    - src/pulsemanager.cpp: replace hardcoded modules paths with dynamic ones
+      depending on the detected PA version.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
